--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
- <h1>karthik reddy </h1>   
+ <h1>karthik reddy ben </h1>   
 </body>
 </html>
